# webber

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
http/: create_page.http  delete_file.http  get_page.http  upload_file.http  user_exists.http
include/: db_abstract.hpp  prebuilt.hpp.in  scrypto.hpp  webber.hpp
prebuilt/: default_settings.json  index_page.html  main.css  main.js  setup_page.html
src/: account.cpp  db_abstract.cpp  file.cpp  main.cpp  page.cpp  pages.cpp  scrypto.cpp  upload.cpp
